multiple servers now working, port number is taken as command line arguemnt for client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ set(CLIENT_FILES
   src/client.cpp
 )
 
-set(SERVER_FILES
+set(SERVER0_FILES
   src/server0.cpp
+)
+
+set(SERVER1_FILES
+  src/server1.cpp
 )
 
 add_executable(client ${CLIENT_FILES})
@@ -19,7 +23,12 @@ target_include_directories(client PRIVATE include)
 target_include_directories(client PRIVATE third_party/asio-1.18.0/include)
 target_link_libraries(client PRIVATE Threads::Threads)
 
-add_executable(server ${SERVER_FILES})
-target_include_directories(server PRIVATE include)
-target_include_directories(server PRIVATE third_party/asio-1.18.0/include)
-target_link_libraries(server PRIVATE Threads::Threads)
+add_executable(server0 ${SERVER0_FILES})
+target_include_directories(server0 PRIVATE include)
+target_include_directories(server0 PRIVATE third_party/asio-1.18.0/include)
+target_link_libraries(server0 PRIVATE Threads::Threads)
+
+add_executable(server1 ${SERVER1_FILES})
+target_include_directories(server1 PRIVATE include)
+target_include_directories(server1 PRIVATE third_party/asio-1.18.0/include)
+target_link_libraries(server1 PRIVATE Threads::Threads)
